dict_load_foreign(): Use a local variable instead of the 10-bit field foreign->n_fields in order to preserve ON UPDATE CASCADE and ON DELETE CASCADE flags.  For some reason, gcc does not warn about shifting a 10-bit field to right by 24 bits.  (Bug #24741)

This bug was introduced while reducing the memory footprint of the
InnoDB data dictionary (Bug #20877).

innodb.test, innodb.result: Add a test case.